// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/login/LoginMfa should match snapshot 1`] = `
<div
  className="more-modal__row clickable "
  key="option_user_id"
  onClick={[Function]}
>
  <ProfilePicture
    hasMention={false}
    height="32"
    isRHS={false}
    src="profile_picture_url"
    status="online"
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      @undefined
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <i
        className="fa fa-plus"
      />
    </div>
  </div>
</div>
`;

exports[`components/login/LoginMfa should match snapshot, option (user) is the current user 1`] = `
<div
  className="more-modal__row clickable "
  key="option_user_id"
  onClick={[Function]}
>
  <ProfilePicture
    hasMention={false}
    height="32"
    isRHS={false}
    src="profile_picture_url"
    status="online"
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      <FormattedMessage
        defaultMessage="{displayname} (you)"
        id="more_direct_channels.directchannel.you"
        values={
          Object {
            "displayname": "@undefined",
          }
        }
      />
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <i
        className="fa fa-plus"
      />
    </div>
  </div>
</div>
`;

exports[`components/login/LoginMfa should match snapshot, show email address of option (user) 1`] = `
<div
  className="more-modal__row clickable "
  key="option_user_id"
  onClick={[Function]}
>
  <ProfilePicture
    hasMention={false}
    height="32"
    isRHS={false}
    src="profile_picture_url"
    status="online"
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      @undefined
    </div>
    <div
      className="more-modal__description"
    >
      option@user.com
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <i
        className="fa fa-plus"
      />
    </div>
  </div>
</div>
`;
